Expired studies should not enable features.

Previosuly, the "chosen group" was queried before an
expired study was marked as enabled, which resulted in
the wrong features being activated/de-activated for
disabled studies (i.e. it would apply the ones based
on the dice roll, rather then the default group ones).

This CL fixes that and adds a test.

BUG=612533

Review-Url: https://codereview.chromium.org/1986073003
Cr-Commit-Position: refs/heads/master@{#394202}

Former-commit-id: 7141106df26d989fa4a37bee08a0353fa84901ab